<resources>
    <string name="app_name">SensorBasedMobileProject</string>

    // Button Descriptions
    <string name="camera_button_description">Scan barcodes with this camera page</string>
    <string name="home_button_description">Click to get to home page</string>
    <string name="profile_button_description">Click to get to profile page</string>
    <string name="scan_button_description">Push to scan barcode</string>

    // Menu Items
    <string name="menu_profile">Profile</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_map">Map</string>
    <string name="menu_details">Details</string>
    <string name="menu_shopping_list">Shopping List</string>

    <string name="main_fragment_text" translatable="false">Just a placeholder.</string>

    // Scanning fragment
    <string name="scan_barcode">Scan new barcode</string>

    // Profile fragment
    <string name="add_shopping_list_edit_text_desc">Add this item to shopping list</string>
    <string name="add_button_desc">Push to add item to shopping list</string>
    <string name="add_amount_desc">Amount</string>
    <string name="clear_button_desc">Clear shopping list</string>
    <string name="clear_button_text">CLEAR</string>
    <string name="shopping_list_title">Shopping list:</string>
    <string name="add_item_toast">Fill both item name and amount!</string>

    // Pedometer
    <string name="steps_text">Steps</string>

    // Fineli Search
    <string name="search_result">Search result here</string>
    <string name="button_search">Search</string>
    <string name="name" translatable="false">placeholder</string>
    <string name="start" translatable="false">placeholder</string>
    <string name="stop" translatable="false">placeholder</string>
    <string name="btn_search_fineli">Search</string>
    <string name="search_hint">Food you want to search</string>

    // OpenFoodFacts Search
    <string name="search_open_food_facts_database">Search with EAN code</string>
    <string name="content_image">Product image from Open Food Facts database</string>
    <string name="allergens_from_ingredients">Allergens</string>
    <string name="no_allergens">No allergens found from ingredients</string>
    <string name="unknown_country">Country of origin unknown</string>

    // custom_row_off
    <string name="date_of_search">Date of search: %1$s</string>
    <string name="allergens">Allergens: %1$s</string>


    // Allergens
    <string name="wheat">wheat</string>
    <string name="rye">rye</string>
    <string name="barley">barley</string>
    <string name="spelt">spelt</string>
    <string name="kamutGrain">kamut grain</string>
    <string name="oats">oats</string>
    <string name="otherCerealProducts">other cereal products</string>
    <string name="fish">fish</string>
    <string name="crustacean">crustacean</string>
    <string name="mollusc">mollusc</string>
    <string name="egg">egg</string>
    <string name="nuts">nuts</string>
    <string name="soy">soy</string>
    <string name="milk">milk</string>
    <string name="celery">celery</string>
    <string name="mustard">mustard</string>
    <string name="lupine">lupine</string>
    <string name="sulfur">sulfur</string>
    // Details
    <string name="product_details">Product details</string>
    <string name="energy">Energy: %1$s kcal</string>
    <string name="fat">Fat: %1$s g</string>
    <string name="sat_fat">- Saturated fat: %1$s g</string>
    <string name="carbs">Carbohydrates: %1$s g</string>
    <string name="sugars">Sugars: %1$s g</string>
    <string name="fibers">- Fibers: %1$s g</string>
    <string name="proteins">Proteins: %1$s g</string>
    <string name="salt">Salt: %1$s g</string>
    <string name="sodium">- Sodium: %1$s g</string>
    <string name="coo">Country of origin: unknown</string>
    <string name="allergens_found">Allergens: %1$s</string>
    <string name="average_nutrients">Average nutrient content per 100g</string>
    <string name="no_allergens_found">No allergens found </string>
    <string name="made_in">Made in %1$s</string>
    <string name="link">"Link to product website:
        %1$s"</string>
    <string name="product_image_desc">Product image for scanned item</string>


    // Home fragment
    <string name="welcome_text">Welcome</string>
    <string name="search_fineli_database">Search Fineli database</string>

    // Fineli recyclerview custom row
    <string name="nr" translatable="false">1</string>

    // Map
    <string name="address_location">Address: %1$s is in latitude: %2$s and longitude: %3$s</string>
    <string name="shared_pref" translatable="false">shared_preferences</string>
    <string name="shared_preference_last_longitude" translatable="false">com.example.w2_d1_location_app.shared_preference_longitude</string>
    <string name="shared_preference_last_latitude" translatable="false">com.example.w2_d1_location_app.shared_preference_latitude</string>
    <string name="map_point_address">This location address is: %1$s</string>
    <string name="steps_taken" translatable="false">0</string>

    // String Array
    <string name="amount">pcs</string>
    <string name="weight_large">kg</string>
    <string name="weight_small">g</string>
    <string name="volume_large">l</string>
    <string name="volume_medium">dl</string>
    <string name="volume_small">ml</string>
    <string name="bag">bag</string>
    <string name="can">can</string>
    <string name="packet">pkg</string>
    <string name="bottle">btl</string>
    <string name="set_your_allergies_here">Set your allergies here</string>
    <string name="allergies_button_text">Set allergies</string>
</resources>