<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    tools:context=".NavigationFragment">

    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginHorizontal="2dp"
        android:background="@color/design_default_color_primary_variant"
        android:contentDescription="@string/home_button_description"
        android:src="@drawable/home_icon" />

    <ImageButton
        android:id="@+id/camera_button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="2dp"
        android:layout_weight="1"
        android:background="@color/design_default_color_primary_variant"
        android:contentDescription="@string/camera_button_description"
        android:src="@drawable/camera_icon" />

    <ImageView
        android:id="@+id/profile_button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginHorizontal="2dp"
        android:background="@color/design_default_color_primary_variant"
        android:contentDescription="@string/profile_button_description"
        android:src="@drawable/profile_icon" />
</LinearLayout>