<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.SensorBasedMobileProject"
    tools:context=".fragments.shopping_list.ShoppingListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:paddingHorizontal="5dp"
        android:background="@drawable/borders_recycler_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <EditText
            android:id="@+id/edit_text_shopping_list_item"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="8"
            android:autofillHints="Shopping List Item"
            android:background="@drawable/border"

            android:ems="10"
            android:hint="@string/add_shopping_list_edit_text_desc"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/edit_text_shopping_list_item_amount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="3"
            android:autofillHints="Amount"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/add_amount_desc"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:labelFor="@+id/type_spinner"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:background="@drawable/border_spinner">
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/type_spinner"
            android:textColor="@color/white"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clear_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/clear_button_desc"
            android:backgroundTint="@color/teal_dark"
            android:textColor="@color/black"
            android:layout_margin="5dp"
            android:background="@drawable/border"
            android:layout_weight="1"
            android:text="@string/clear_button_text" />
        <ImageButton
            android:background="@drawable/border"
            android:layout_gravity="center_vertical"
            android:id="@+id/add_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:src="@drawable/sharp_add_black_36"
            android:backgroundTint="@color/teal_dark"
            android:contentDescription="@string/add_button_desc" />
    </LinearLayout>
</LinearLayout>