<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:checkable="true"
    android:clickable="true"
    android:focusable="true"
    android:padding="8dp"
    android:id="@+id/off_card"
    app:cardElevation="5dp"
    style="@style/MyCardView"
    android:theme="@style/Theme.SensorBasedMobileProject">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border">


        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="Date of search: 12.03.2021"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/product_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="141dp" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginStart="8dp"
            android:background="@drawable/border"
            android:text="@string/main_fragment_text"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/product_image"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <TextView
            android:id="@+id/manufacturing_places"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/border"
            android:text="@string/main_fragment_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/product_image"
            app:layout_constraintTop_toBottomOf="@+id/product_name" />

        <TextView
            android:id="@+id/allergens_from_ingredients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/border"
            android:text="@string/allergens_from_ingredients"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/product_image"
            app:layout_constraintTop_toBottomOf="@+id/manufacturing_places" />

        <TextView
            android:id="@+id/code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/border"
            android:text="@string/main_fragment_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/product_image"
            app:layout_constraintTop_toBottomOf="@+id/allergens_from_ingredients" />

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="128dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_image"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_report_image" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>